--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -24,5 +24,23 @@ body::selection {
     color: #121212;
 }
 
+@keyframes marquee {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.animate-marquee {
+    animation: marquee 30s linear infinite;
+}
+
+.animate-marquee:hover {
+    animation-play-state: paused;
+}
+
+
 /*---break---*/
 
