--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -41,6 +41,21 @@ body::selection {
     animation-play-state: paused;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+
+.carousel-item:target h2 {
+    color: #EAEAEA;
+}
+
+
 
 
 
